--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Flux TodoMVC - Asrocky</title>
+	<title>TodoMVC-Rebus</title>
 	<link rel="stylesheet" href="todomvc-common/base.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
